src/test/ImmutableArray/ImmutableArray.panda
var a := ImmutablePrimitiveArray<MutableString>()

var b:ImmutablePrimitiveArray<Int> := [1, 2, 3, 4, 5]
b[3] := 5

b[0 .. 2] := [1, 2, 3]

b.append(10)

b.length := 3